--- a/index.html
+++ b/index.html
@@ -5,34 +5,40 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="page-reset.css">
   <link rel="stylesheet" href="styles.css">
   <title>Just Breathe...</title>
+  <link rel="icon" href="img/logo.png" type="image/x-icon" />
 </head>
 
 <body>
-  <h1>Just Breathe...</h1>
+  <main class="main">
+    <header class="header">
+      <h1>Just Breathe...</h1>
+    </header>
+    <div class="container" id="container">
 
-  <div class="container" id="container">
+      <div class="circle"></div>
+      <p id="text"></p>
 
-    <div class="circle"></div>
-    <p id="text"></p>
+      <div class="pointer-container">
+        <span class="pointer"></span>
+      </div>
 
-    <div class="pointer-container">
-      <span class="pointer"></span>
+      <div class="circle-gradient"></div>
+
     </div>
-
-    <div class="circle-gradient"></div>
-
-  </div>
-
-  <div class="footer">
-    <span class="credits">Fullscreen photo by <a href="https://unsplash.com/@krisroller?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Kristopher Roller</a> on <a
-        href="https://unsplash.com/s/photos/calm?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-    </span>
-    <span class="credits">Mobile photo by <a href="https://unsplash.com/@trapnation?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Andre Benz</a> on <a
-        href="https://unsplash.com/s/photos/calm?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-    </span>
-  </div>
+    <footer class="footer">
+      <span class="credits">Fullscreen photo by <a
+          href="https://unsplash.com/@krisroller?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Kristopher
+          Roller</a>
+      </span>
+      <span class="credits">Mobile photo by <a
+          href="https://unsplash.com/@trapnation?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Andre
+          Benz</a>
+      </span>
+    </footer>
+  </main>
   <script src="scripts.js" charset="utf-8"></script>
 </body>
 
